--- a/Part2/006-phonebook-db/src/index.css
+++ b/Part2/006-phonebook-db/src/index.css
@@ -1,9 +1,16 @@
-.error {
-  color: red;
+.notification {
   background: lightgrey;
   font-size: 20px;
   border-style: solid;
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+}
+
+.success {
+  color: green;
 }
